--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<!-- app name can be changed -->
 <resources>
-    <string name="app_name">ReactNativeStarter</string>
+    <string name="app_name">Amaco</string>
 </resources>
